--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               {
                 className: "text-2xl font-black tracking-tighter text-gradient",
               },
-              "SURAJ PRASAD",
+              "SURAJ_PRASAD",
             ),
 
             React.createElement(
