--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                 className:
                   "text-indigo-400 font-bold tracking-[0.4em] text-xs uppercase",
               },
-              "Senior Lead Engineer & AI Architect",
+              "Lead Engineer & AI Explorer",
             ),
             React.createElement(
               "h1",
@@ -700,7 +700,7 @@
                 className:
                   "text-slate-400 text-base md:text-lg max-w-2xl mx-auto font-medium",
               },
-              "Architecting high-scale mobile platforms and leading the frontier of AI integration for next-gen enterprise and fintech solutions.",
+              "Seasoned Full-Stack Developer (Mobile & Web) leveraging 9+ years of experience to build scalable platforms, with a focus on integrating next-gen AI solutions.",
             ),
           ),
 
